# THI_lab6

./: CMakeLists.txt  domain.h  logic.h  main.cpp  main_test.cpp
